static/examples/workload/test-client.yaml
kind: Pod
apiVersion: v1
metadata:
  name: test-client
  labels:
    app: test-client
spec:
  containers:
  - command:
    - /bin/sh
    - -c
    - >
      while true; do l=$(expr 100 \* \( `date +%M` - 30 \)); l=${l#-} ; for i in $l; do wget -q -O- http://nginx.example.com>/dev/null; t=$(printf "%.5f" `echo "scale=5;60/$l"|bc`); sleep $t; done; done
    image: busybox:latest
    name: test-client
